--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,12 +55,12 @@
   }
 
   html {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
   }
 
   body {
     @apply bg-background text-foreground;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     max-width: 100vw;
   }
 }
@@ -89,7 +89,7 @@ body {
 
 /* تحسين الجداول للشاشات الصغيرة */
 .table-container {
-  overflow-x: auto;
+  /* overflow-x: auto; */
   max-width: 100%;
   -webkit-overflow-scrolling: touch;
 }
@@ -190,4 +190,56 @@ body {
   .calendar-scroll-container > div {
     scroll-snap-align: start;
   }
+}
+
+@keyframes floatUp {
+  0% {
+    transform: translateY(100vh);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-20vh);
+    opacity: 0;
+  }
+}
+
+@keyframes slowRotate {
+  0% {
+    transform: rotate(0deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 1;
+  }
+}
+
+.animate-bubble {
+  animation-name: floatUp;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  position: absolute;
+  opacity: 0;
+  /* animation-duration: 10s;
+  animation-delay: 0s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite; */
+}
+.rotate-animation {
+  animation: slowRotate 20s linear infinite;
+  opacity: 0;
+  /* animation-duration: 10s;
+  animation-delay: 0s;
+  animation-direction: alternate;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite; */
 }
